--- a/part7/index.html
+++ b/part7/index.html
@@ -12,8 +12,7 @@
     <form name="form1" method="post" action="https://cs564.cs.wisc.edu/rasmusse/basic_search.php">
       <tr align="center">
         <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">Title</font></td>
-        <td height="30" class="deepred" width="52%"><input type="text" name="title">
-        </td>
+        <td height="30" class="deepred" width="52%"><input type="text" name="title"></td>
       </tr>
       <tr>
         <td height="24" align="center" width="48%">
@@ -24,11 +23,11 @@
     </form>
   </table>
   
-  <h3><a href="https://cs564.cs.wisc.edu/halit/advanced_search.html">Advanced Search</a></h3>
+  <h3><a href="https://cs564.cs.wisc.edu/rasmusse/advanced_search.html">Advanced Search</a></h3>
   
-  <h3><a href="https://cs564.cs.wisc.edu/halit/update.html">Update Books</a></h3>
+  <h3><a href="https://cs564.cs.wisc.edu/rasmusse/update.html">Update Books</a></h3>
 
-  <h3><a href="https://cs564.cs.wisc.edu/halit/browse.php">Browse All Books</a></h3>
+  <h3><a href="https://cs564.cs.wisc.edu/rasmusse/browse.php">Browse All Books</a></h3>
 </body>
 
 </html>
