Finished modify.php

--- a/part7/update.html
+++ b/part7/update.html
@@ -4,7 +4,7 @@
 
  <body>
 
- <h2>Update NFL Offensive Player Info</h2>
+ <h2>Update NFL Offensive Player's</h2>
   <h3>Modify the details of an existing NFL player.</h3>
 
   <p>
@@ -52,8 +52,8 @@
   
   <p>
     Enter the player name, team name, and jersey number of an <br>
-	offensive player.  The total yards and touchdowns are optional <br>
-	values.  Click submit to insert this player into the database.
+	offensive player.  The the entered total yards, and touchdowns <br>
+	will be updated on the database.
   </p>
 
   <table width="40%" border="0" cellpadding="0" cellspacing="1" bgcolor="#CCCCCC">
