--- a/part7/advanced_search.html
+++ b/part7/advanced_search.html
@@ -45,7 +45,7 @@
 		<select name="yarddrop">
 		  <option value="ylt">Less Than</option>
 		  <option value="yeq">Equal to</option>
-		  <option value="ylt">Greater Than</option>
+		  <option value="ygt">Greater Than</option>
 		</select><input type="text" name="yards" size="10">
         </td>
       </tr>
