--- a/part7/advanced_search.html
+++ b/part7/advanced_search.html
@@ -22,13 +22,13 @@
         </td>
       </tr>
       <tr align="center">
-        <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">Jersey Number</font></td>
+        <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">Jersey # (0-99)</font></td>
 	<td height="30" class="deepred" width="48%"><input type="checkbox" name="jerseybox" value="jerseybox"></td>
         <td height="30" class="deepred" width="52%"><input type="text" name="jersey">
         </td>
       </tr>
       <tr align="center">
-        <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">Touchdowns</font></td>
+        <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">TDs (int)</font></td>
 	<td height="30" class="deepred" width="48%"><input type="checkbox" name="tdbox" value="tdbox"></td>
         <td height="30" class="deepred" width="52%">
 		<select name="tddrop">
@@ -39,7 +39,7 @@
         </td>
       </tr>
       <tr align="center">
-        <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">Yards</font></td>
+        <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">Yards (int)</font></td>
 	<td height="30" class="deepred" width="48%"><input type="checkbox" name="yardbox" value="yardbox"></td>
         <td height="30" class="deepred" width="52%" nowrap="nowrap">
 		<select name="yarddrop">
@@ -58,7 +58,7 @@
       </tr>
     </form>
   </table>
-
+  <a href="https://cs564.cs.wisc.edu/rasmusse/index.html">Back to main page</a>
 </body>
 
 </html>
