--- a/part7/index.html
+++ b/part7/index.html
@@ -1,17 +1,17 @@
 <html>
 
- <head><title>CS 564 PHP Project Main Page: Managing a Database of Books</title></head>
+ <head><title>CS 564 PHP Project Main Page: NFL Offensive Players</title></head>
 
  <body>
 
- <h2>Sample CS 564 PHP Project Main Page:<br> Managing a Database of Books</h2>
-  <h3>Search for a Book</h3>
-  Enter a book title<br>
-  (exact title only, e.g. Introduction to Algorithms, Database Management Systems, Modern Operating Systems, etc.):
+ <h2>Interface for managing NFL Offensive Players in a <br>Fantasy Football League</h2>
+  <h3>Search for a Player</h3>
+  Enter the player's name:<br>
+  (partial matches OK, Aaron Rodgers, Rodgers, etc.):
   <table width="30%" border="0" cellpadding="0" cellspacing="1" bgcolor="#CCCCCC">
     <form name="form1" method="post" action="https://cs564.cs.wisc.edu/rasmusse/basic_search.php">
       <tr align="center">
-        <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">Title</font></td>
+        <td height="30" class="deepred" width="48%"><font face="Times New Roman, Times, serif">Name</font></td>
         <td height="30" class="deepred" width="52%"><input type="text" name="title"></td>
       </tr>
       <tr>
@@ -25,9 +25,9 @@
   
   <h3><a href="https://cs564.cs.wisc.edu/rasmusse/advanced_search.html">Advanced Search</a></h3>
   
-  <h3><a href="https://cs564.cs.wisc.edu/rasmusse/update.html">Update Books</a></h3>
+  <h3><a href="https://cs564.cs.wisc.edu/rasmusse/update.html">Update Players</a></h3>
 
-  <h3><a href="https://cs564.cs.wisc.edu/rasmusse/browse.php">Browse All Books</a></h3>
+  <h3><a href="https://cs564.cs.wisc.edu/rasmusse/browse.php">Browse All Players</a></h3>
 </body>
 
 </html>
